style: Create ProductDescription component structure and Add styling

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -24,7 +24,7 @@ $font-sizes: (
     300: 1.125rem,
     // navigation
     400: 1.75rem,
-    //product tilte - price
+    //product title - price
   ),
   large: (
     100: 0.8125rem,
@@ -34,7 +34,7 @@ $font-sizes: (
     300: 0.9375rem,
     // navigation
     400: 2.75rem,
-    //product tilte - price
+    //product title - price
   ),
 );
 
