--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -1,6 +1,12 @@
 @import './variables';
 
-@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;500;600;700;800&display=swap');
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
 body {
   //Example: How to call the variables?
