--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -1,16 +1,82 @@
-@import './variables';
+@import "./variables";
 
-@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;500;600;700;800&display=swap");
 
+/*
+  Josh's Custom CSS Reset
+  https://www.joshwcomeau.com/css/custom-css-reset/
+*/
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
 }
 
+html,
+body {
+  height: 100%;
+}
 body {
   //Example: How to call the variables?
   background-color: var(--clr-secondary-100);
   font-size: var(--fz-small-200);
-  font-family: 'Kumbh Sans', sans-serif;
+  font-family: "Kumbh Sans", sans-serif;
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+p {
+  overflow-wrap: break-word;
+}
+ul,
+li,
+a {
+  font: inherit;
+  list-style: none;
+  text-decoration: none;
+  padding: 0;
+}
+
+#root,
+#__next {
+  isolation: isolate;
+}
+
+/* remove animations for people who've turned them off */
+@media (prefers-reduced-motion: reduce) {
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
 }
