--- a/src/components/layout/navigation/Navigation.scss
+++ b/src/components/layout/navigation/Navigation.scss
@@ -1,85 +1,21 @@
 .header {
-  z-index: 10;
-  width: 100%;
-  background-color: transparent;
-  color: $--clr-white;
-  padding: 2rem 3rem;
+  background-color: var(--clr-secondary-100);
+  color: var(--clr-secondary-500);
 
   .nav {
     display: flex;
-    align-items: center;
   }
 }
-
-.links {
-  display: none;
-}
-
-.mobile-links {
-  background-color: $--clr-white;
-  display: flex;
-  flex-direction: column;
-  gap: 2.5em;
-  align-items: center;
-  position: absolute;
-  top: 11%;
-  left: 0;
-  right: 0;
-  bottom: auto;
-  padding: 2em;
-  margin-inline: 1.5em;
-  border-radius: 5px;
-  font-family: $--body-font;
-  font-size: $fs-500;
-  color: $--clr-white;
-  z-index: 1;
-
-  & .mobile-link {
-    position: relative;
-    color: $--clr-dark-blue;
-  }
-}
-
-
 
 /* Tablet portrait and larger */
 @media only screen and (min-width: 37.5em) {
-  .mobile-links {
-    display: none;
-  }
-
   .links {
     display: flex;
-    align-items: center;
-    margin-left: auto;
 
     & .link {
       position: relative;
-      padding: 1.3rem 2rem;
-      font-size: $fs-600;
-      color: $--clr-white;
-
-      &:hover::after {
-        content: "";
-        position: absolute;
-        top: 3em;
-        height: 3px;
-        width: 1.5rem;
-        background: $--clr-yellow;
-        left: 50%;
-        transform: translateX(-50%);
-        border-radius: 5px;
-      }
+      font-size: var(--fz-300);
+      color: var(--clr-secondary-100);
     }
   }
-}
-/* Tablet landscape and larger */
-@media only screen and (min-width: 56.25em) {
-}
-
-/* Desktop and larger */
-@media only screen and (min-width: 75em) {
-}
-/* Big desktop (4k) */
-@media only screen and (min-width: 112.5em) {
 }
