--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -1,6 +1,6 @@
-@import "./variables";
+@import './variables';
 
-@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;500;600;700;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;500;600;700;800&display=swap');
 
 /*
   Josh's Custom CSS Reset
@@ -24,7 +24,7 @@ body {
   //Example: How to call the variables?
   background-color: var(--clr-secondary-100);
   font-size: var(--fz-small-200);
-  font-family: "Kumbh Sans", sans-serif;
+  font-family: 'Kumbh Sans', sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
@@ -41,6 +41,11 @@ button,
 textarea,
 select {
   font: inherit;
+}
+
+button {
+  border: none;
+  background: transparent;
 }
 
 h1,
