--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -6,3 +6,42 @@
     @content;
   }
 }
+
+@mixin btn-carousel($position) {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
+  background-color: var(--clr-secondary-100);
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  opacity: 0;
+  visibility: hidden;
+  cursor: none;
+
+  &:hover {
+    transform: translateY(-50%) scale(1.07);
+  }
+  &:active {
+    transform: translateY(-50%) scale(1);
+  }
+
+  &.previous {
+     left: $position;
+    & > img {
+      margin-right: 3px;
+    }
+  }
+
+  &.next {
+    right: $position;
+    & > img {
+      margin-left: 3px;
+    }
+  }
+}
