--- a/src/components/UI/Carousel.scss
+++ b/src/components/UI/Carousel.scss
@@ -1,4 +1,5 @@
-@import "../../sass/mixins";
+@import '../../sass/variables';
+@import '../../sass/mixins';
 
 .carousel {
   width: min(100%, 560px);
@@ -7,24 +8,28 @@
   margin-top: 0.5rem;
   overflow: hidden;
   transition: transform 0.4s;
+
+  @include mq(medium) {
+    display: none;
+  }
 }
 
 .carousel-images {
   white-space: nowrap;
   transition: transform 1.2s;
-}
 
-.carousel-images picture {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-}
+  &--item {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
 
-.carousel-images img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
 .btn-carousel {
