--- a/src/components/layout/product/ProductOverview.scss
+++ b/src/components/layout/product/ProductOverview.scss
@@ -1,12 +1,30 @@
 @import '../../../sass/variables';
 @import '../../../sass/mixins';
 
+main.product-overview {
+  padding-bottom: 3rem;
+
+  @include mq(medium) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 .button-container {
-  margin-inline: 1rem;
   padding: 0.5rem;
   display: flex;
   flex-direction: column;
-  gap: 1em;
+  gap: 1rem;
+  max-width: 592px;
+  margin: 0 auto;
+
+  @include mq(medium) {
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    padding: 1rem;
+    max-width: 472px;
+  }
 
   .item-counter {
     border-radius: 10px;
@@ -14,7 +32,7 @@
     justify-content: space-between;
     background-color: var(--clr-secondary-200);
     padding: 1em;
-    max-width: 22rem;
+    flex: 0.5;
   }
 
   .counter-number {
@@ -29,7 +47,11 @@
     background-color: var(--clr-primary-400);
     color: var(--clr-secondary-100);
     padding: 1em;
-    max-width: 22rem;
     box-shadow: 0px 20px 50px -20px #ff7e1b;
+    font-weight: bold;
+
+    @include mq(medium) {
+      flex: 1;
+    }
   }
 }
